#1; Sidebar styling. Try include Noto Serif.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-start-rgb))
+  background: rgb(var(--background-start-rgb));
+  font-family: "Noto Serif", serif;
 }
 
 @layer utilities {
